# local-deep-researcher

./: .claude_code_config.json  .gitignore  Makefile  NVIDIA_NIM_SETUP.md  README.md  TESTING.md  article.md  chat-export-1751342677272.json  debug_mcp.py  langgraph.json  pipelines.md  pyproject.toml  quick_test.py  requirements.txt  test_config.py  test_direct_tools.py  test_jina.py  test_mcp_protocol.py  test_mcp_server.py  test_research_pipeline.py  workflows.md
data/: intent_classifier_nn.pth  intents.json  label_encoder_xlm.pkl  misclassified_examples.json  tfidf_vectorizer.pkl
notebooks/: arxiv_metadata.ipynb  arxiv_server.ipynb  deep_fnn.ipynb  intent_classifier.ipynb  intents_merged.csv  jina_reader.ipynb  visualization-xlm-roberta-llm-detect.ipynb  web_search.ipynb
server/arxiv-mcp-server/: pyproject.toml
server/arxiv-mcp-server/src/arxiv_mcp_server/: config.py  server.py
server/arxiv-mcp-server/src/arxiv_mcp_server/prompts/: __init__.py  deep_research_analysis_prompt.py  handlers.py  prompt_manager.py  prompts.py
server/arxiv-mcp-server/src/arxiv_mcp_server/resources/: __init__.py  papers.py
server/arxiv-mcp-server/src/arxiv_mcp_server/tools/: __init__.py  hybrid_search.py  list_papers.py  (+2 more)
server/brave-deep-research-mcp/: package-lock.json
src/: main.py  requirements.txt
src/research_pipeline/: arxiv_direct_client.py  arxiv_http_client.py  configuration.py  graph.py  intent_classifier.py  lmstudio.py  mcp_client.py  nvidia_nim.py  pinecone_storage.py  prompts.py  search_engines.py  state.py  utils.py
~/.arxiv-mcp-server/papers/: 2410.21338v2.md
